# cicdTest

./: pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
src/: README.md
src/kronoterm_voice_actions/: requirements.txt  runner.py
src/kronoterm_voice_actions/test/: runner.py  test_config_flow.py  test_matcher.py  test_mqtt.py
src/kronoterm_voice_actions/test_local/: test_matcher.py
src/kronoterm_voice_actions/wyoming/: client.py  commands_config.json  config_flow.py  conversation.py  kronoterm_enums.py  kronoterm_models.py  matcher.py  models.py  mqtt_client.py  wake_word.py
test/: conftest.py  test_test.py
